<resources>
    <string name="app_name">Internet of Bicycles App</string>

    <string-array name="navigation_icons">
        <item>find_my_bicycle</item>
        <item>notifications</item>
        <item>theft_protection</item>
        <item>preferences</item>
        <item>credits_and_licences</item>
    </string-array>

    <string-array name="navigation_items">
        <item>Find my Bicycle</item>
        <item>Notifications</item>
        <item>Theft Protection</item>
        <item>Preferences</item>
        <item>Credits and Licences</item>
    </string-array>

    <string name="find_my_bicycle">Find my Bicycle</string>
    <string name="notifications">Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="credits_and_licences">Credits and Licences</string>
    <string name="menu">Menu</string>
    <string name="relocate_my_bicycle">Relocate my Bicycle</string>
    <string name="please_enable_location">Please enable GPS on your device, so we can show your position. Otherwise, this app will not work properly.</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="cancel">Cancel</string>
    <string name="create_notification">Create Notification</string>
    <string name="your_location">Your location</string>
    <string name="your_bicycle">Your bicycle</string>
    <string name="google_play_services_missing">Google Play Services missing</string>
    <string name="please_update_google_play_service">Please update Google Play Services</string>
    <string name="notification_name">Notification name</string>
    <string name="notification_text_with_description">Notification text\n\nThis text is displayed when the notification triggers.</string>
    <string name="please_select_region">Please select a region for the notification.</string>
    <string name="notification_shall_get_triggered">Notification should appear when the bicycle &#8230;</string>
    <string name="enters_region">&#8230; enters the region.</string>
    <string name="leaves_region">&#8230; leaves the region.</string>
    <string name="create">Create</string>
    <string name="notification_was_created">Notification was created successfully.</string>
    <string name="notification_error">Notification could not be created.</string>
    <string name="notification_name_not_valid">Please enter a notification name.</string>
    <string name="notification_text_not_valid">Please enter a notification text.</string>
    <string name="notification_was_deleted">Notification was deleted successfully.</string>
    <string name="notification_delete_error">Notification could not be deleted.</string>
    <string name="edit_notification">Edit Notification</string>
    <string name="edit">Edit</string>
    <string name="notification_was_edited">Notification was edited successfully.</string>
    <string name="notification_edit_error">Notification could not be edited.</string>
    <string name="theft_protection">Theft Protection</string>
    <string name="current_status">Current status</string>
    <string name="locked">locked</string>
    <string name="unlocked">unlocked</string>
    <string name="manual_mode_activated">Manual mode activated</string>
    <string name="automatic_mode_activated">Automatic mode activated</string>
    <string name="radius">Radius:</string>
    <string name="meters">meters</string>
    <string name="notification_no_marker">Please click on the map to create a marker.</string>
    <string name="notification_radius_null">The radius must not be 0 meters.</string>
    <string name="delete_really">Do you really want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="error_loading_bike_location">Sorry, we had a problem receiving the location of your bicycle.</string>
    <string name="error_http_request">HTTP Request failed</string>
    <string name="device_doesnt_support_bluetooth">Your device doesn\'t support Bluetooth.</string>
    <string name="please_enable_bluetooth">Please enable bluetooth on your device.</string>
    <string name="open_bluetooth_setting">Open Bluetooth settings</string>
    <string name="connected_to_bluetooth_device">Connected to Bluetooth device.</string>
    <string name="disconnected_from_bluetooth_device">Disconnected from Bluetooth device.</string>
    <string name="bluetooth_device_found">Bluetooth device found.</string>
    <string name="scanning_for_bluetooth_devices">Scanning for Bluetooth devices &#8230;</string>
    <string name="device_id">Device ID</string>
    <string name="device_id_description">Please fill in the device ID of your smart bicycle device. This ID is used to distinguish your smart bicycle device from others.</string>
    <string name="please_configure_device_id">Please configure your smart bicycle device id in the preferences.</string>
    <string name="open_preferences">Open preferences</string>
    <string name="theft_protection_key" translatable="false">27fh94259n7c18jzm35m8uv15vz7cmzc51u08c0u855cvum8245zz</string>
    <string name="start_scan">Scan for devices</string>
    <string name="location_not_found">The location of your bicycle could not be determined. Maybe your smart bicycle device id is configured incorrectly.</string>
    <string name="error_json_array_empty" translatable="false">JSON Array empty</string>
    <string name="error_invalid_json_array" translatable="false">(Invalid JSON Array)</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="credits_headline_btle">Bluetooth Low Energy Android Test</string>
    <string name="credits_text_btle_1">Simple test for sending and receiving data to a Bluetooth Low Energy UART service from an Android 4.3 or 4.4 device.</string>
    <string name="credits_text_btle_2">GitHub: https://github.com/tdicola/BTLETest</string>
    <string name="internet_of_bicycles">Internet of Bicycles</string>
    <string name="docents">Docents:\n\t\tProf. Dr. Albert Remke\n\t\tJan Wirwahn\n\t\tSimon Jirka</string>
    <string name="platform_group">Platform Team:\n\t\tLars Syfuß\n\t\tMarius Runde\n\t\tDaniel Sawatzky</string>
    <string name="device_group">Device Team:\n\t\tChristoph Kisfeld\n\t\tTobias Brüggentisch\n\t\tRené Unrau\n\t\tNicholas Schiestel\n\t\tLukas Lohoff</string>
    <string name="app_group">App Team:\n\t\tAndreas Ohrem\n\t\tAleksandr Shirokov\n\t\tAndré Wieghardt\n\t\tJulius Wittkopp</string>
    <string name="credits">Credits</string>
    <string name="licences">Licences</string>
    <string name="invalid">invalid</string>
</resources>
