<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_notification"
            android:textSize="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:id="@+id/headline" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:id="@+id/notification_name_edit"
                    android:inputType="text"
                    android:text="@string/notification_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input"
                    android:textStyle="italic"
                    android:textColor="@color/iob_app_medium_grey"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="15dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/notification_text_edit"
                    android:text="@string/notification_text_with_description"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input"
                    android:textStyle="italic"
                    android:textColor="@color/iob_app_medium_grey"
                    android:gravity="top"
                    android:layout_marginBottom="10dp"
                    android:textSize="15dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_select_region"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp"
                    android:layout_marginBottom="5dp" />

                <de.ifgi.iobapp.map.ScrollMapView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/map" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radius"
                        android:textSize="15dp"
                        android:layout_marginRight="10dp" />

                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:id="@+id/notification_radius_edit"
                        android:inputType="number"
                        android:background="@drawable/input"
                        android:textColor="@color/iob_app_grey"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="15dp"
                        android:layout_marginRight="5dp"
                        android:text="5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meters"
                        android:textSize="15dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_shall_get_triggered"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/radio_enters_leaves">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enters_region"
                        android:id="@+id/radio_enters"
                        android:checked="true"
                        android:textColor="@color/iob_app_grey"
                        android:textSize="14dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leaves_region"
                        android:id="@+id/radio_leaves"
                        android:textColor="@color/iob_app_grey"
                        android:textSize="14dp" />

                </RadioGroup>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right">

                    <ProgressBar
                        android:id="@+id/create_progress_bar"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/circular_progress_bar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="7dp"
                        android:visibility="gone" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/create"
                        android:id="@+id/create_button"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_red_selector"
                        android:textColor="@color/iob_app_white"
                        android:textAllCaps="false"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
