<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:textSize="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/current_status_frame"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:id="@+id/device_id_edit_text"
                android:layout_gravity="right"
                android:inputType="text"
                android:background="@drawable/input"
                android:textColor="@color/iob_app_grey"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15dp"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id_description"
            android:layout_gravity="center_vertical"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</FrameLayout>
